--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Codo a Codo</title>
 </head>
 
@@ -37,24 +39,22 @@
     <section class="container">
         <div class="row">
             <div class="col-12 text-center" data-aos="fade-up" data-aos-duration="900">
-                <h2 class="text-warning h4 mt-3">Consultas CaC 2023</h2>
+                <h2 class="text-warning h4 mt-3">Consultas 1er cuatrimestre Codo a Codo 2023</h2>
                 <p>En este lugar encontrarás los formularios para distintas consultas. <br>
-                    Si tu duda no está acá,  podés consultar en: <br>
-                    -La guía del estudiante adjunta abajo <br>
-                    -La parte de FAQ donde encontraras algunas preguntas frecuentes<br>
-                    Si luego de esos pasos no resolviste tu duda, podés enviarle un mail a tu tutor especificando: <br>
-                    -Datos <br>
-                    -Nro de comisión <br>
-                    -Tipo de consulta en el asunto <br>
+                    Si tu duda no está acá, podés consultar en: <br>
+                    La guía del estudiante adjunta abajo <br>
+                    La parte de FAQ donde encontraras algunas preguntas frecuentes<br>
+                    Si luego de esos pasos no resolviste tu duda, podés enviarle un mail a tu tutor especificando en el asunto del email: <br>
+                    Datos, Nro de comisión, Tipo de consulta. <br><br>
                     <b>No respondas a los mails informativos</b> </p>
             </div>
             <div class="col-12 text-center">
                 <div class="btn-group-vertical gap-2" role="group" aria-label="Vertical button group">
-                    <a target="_blank" href="https://drive.google.com/file/d/1ppN6lupaVYI0VOvyJeJjiGbP-z3JKrmp/view?usp=sharing" type="button" class="btn btn-warning rounded-3 m-2 mt-3">Guia estudiante</a>
-                    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSckJg7cYegetlBclCxL56-IX3oFDivWQOPOc4KarpLMvW2nuA/viewform" type="button" class="btn btn-warning rounded-3 m-2">Cambio de horario</a>
-                    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfCNgXn6gAUxyU9Ow3b9ahj-Dd-tfyzbFMkTh3d8kz7z-WaBg/viewform" type="button" class="btn btn-warning rounded-3 m-2">Baja definitiva</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1ppN6lupaVYI0VOvyJeJjiGbP-z3JKrmp/view?usp=sharing" type="button" class="btn btn-warning rounded-3 m-2 mt-3">Guía estudiante</a>
+                    <a target="_blank" href="https://forms.gle/4YLNU4K6KSc7zTc9A" type="button" class="btn btn-warning rounded-3 m-2">Cambio de horarios</a>
+                    <a target="_blank" href="https://forms.gle/v9TxAUWPDdJGqdWE6" type="button" class="btn btn-warning rounded-3 m-2">Baja definitiva</a>
                     <!-- <a href="" type="button" class="btn btn-warning rounded-3 m-2">Cambio de lenguaje</a> -->
-                    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfZe_ZH1u-E9UzhjiuEfco7lO-OuBMGvaE1B-56cos81YEYbg/viewform" type="button" class="btn btn-warning rounded-3 m-2 mb-5">Canal de consultas</a>
+                    <a target="_blank" href="https://forms.gle/fmuWYZN944LxYtb2A" type="button" class="btn btn-warning rounded-3 m-2 mb-5">Canal de consultas</a>
                     <!-- <a href="" type="button" class="btn btn-secondary rounded-3 m-2 mb-5">Documentacion</a> -->
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
                 <ul class="col-md-4 col-sm-12 list-unstyled d-flex flex-column align-items-center">
-                    <li class="font-weight-bold text-uppercase pt-3 pb-2">social networks</li>
+                    <li class="font-weight-bold text-uppercase pt-3 pb-2">Seguinos</li>
                     <li class="d-flex">
                         <a href="https://instagram.com/programacodoacodo?igshid=NTdlMDg3MTY="><i class="fa-brands fa-instagram fa-2xl text-white icono"></i></a>
                     </li>
