--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     La guía del estudiante adjunta abajo <br>
                     La parte de FAQ donde encontraras algunas preguntas frecuentes<br>
                     Si luego de esos pasos no resolviste tu duda, podés enviarle un mail a tu tutor especificando en el asunto del email: <br>
-                    Datos, Nro de comisión, Tipo de consulta. <br><br>
+                    Datos, comisión, y tipo de consulta. <br><br>
                     <b>No respondas a los mails informativos</b> </p>
             </div>
             <div class="col-12 text-center">
