--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">
-                <img src="img/logo-CAC.webp" alt="codo a codo" width="70" height="35">
+                <img src="img/logo-CAC.webp" alt="codo a codo" width="100" height="55">
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion"> 
                 <i class="fa-solid fa-bars text-white"></i>
@@ -30,7 +30,7 @@
                     <a class="nav-link nav-link-shadow active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item m-2">
-                    <a class="nav-link nav-link-shadow" href="./pages/faq.html">FAQ</a>
+                    <a class="nav-link nav-link-shadow" href="./pages/faq.html">Preguntas Frecuentes</a>
                 </li>
             </ul>
         </div>
@@ -39,14 +39,13 @@
     <section class="container">
         <div class="row">
             <div class="col-12 text-center" data-aos="fade-up" data-aos-duration="900">
-                <h2 class="text-warning h4 mt-3">Consultas 1er cuatrimestre Codo a Codo 2023</h2>
-                <p>En este lugar encontrarás los formularios para distintas consultas. <br>
-                    Si tu duda no está acá, podés consultar en: <br>
-                    La guía del estudiante adjunta abajo <br>
-                    La parte de FAQ donde encontraras algunas preguntas frecuentes<br>
-                    Si luego de esos pasos no resolviste tu duda, podés enviarle un mail a tu tutor especificando en el asunto del email: <br>
-                    Datos, comisión, y tipo de consulta. <br><br>
-                    <b>No respondas a los mails informativos</b> </p>
+                <h2 class="text-warning h3 mt-3">Consultas Codo a Codo 2023</h2><br>
+                <p>En este lugar encontrarás los formularios para distintas consultas.<br>
+                    Tenes disponible tanto la guía del estudiante como las preguntas frecuentes.
+                    Si luego de ver estas opiciones no resolviste tu duda, 
+                    podés enviarle un mail a tu tutor especificando en el asunto del email:
+                    DNI, comisión, y tipo de consulta. <br><br>
+                    <b>No respondas a los mails informativos</b></p>
             </div>
             <div class="col-12 text-center">
                 <div class="btn-group-vertical gap-2" role="group" aria-label="Vertical button group">
@@ -59,31 +58,31 @@
                 </div>
             </div>
     </section>
+
     <!-- footer -->
-    <footer class="text-white py-4">
+    <footer class="text-white">
         <div class="container">
-            <nav class="row">
-                <a href="#" class="col-md-4 col-sm-6 d-flex align-items-center justify-content-center mb-5">
+            <nav class="row d-flex align-items-center justify-content-between">
+                <a href="#" class="col-3">
                     <img src="./img/logo-CAC.webp" alt="codo a codo" width="70" height="35">
                 </a>
-                <ul class="col-md-4 col-sm-6 list-unstyled d-flex align-items-center flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-footer active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-footer" href="./pages/faq.html">FAQ</a>
-                    </li>
-                </ul>
-                <ul class="col-md-4 col-sm-12 list-unstyled d-flex flex-column align-items-center">
-                    <li class="font-weight-bold text-uppercase pt-3 pb-2">Seguinos</li>
-                    <li class="d-flex">
+                <ul class="col-3 list-unstyled">
+                    <li class="font-weight-bold text-uppercase">
+                        <a class="nav-link nav-link-footer d-flex flex-column" aria-current="page" href="#">Home</a>
+                        <a class="nav-link nav-link-footer d-flex flex-column" href="./pages/faq.html">Preguntas Frecuentes</a>
+                    </ul>
+                <ul class="col-3 list-unstyled">
+                    <li class="py-4 d-flex flex-column">
                         <a href="https://instagram.com/programacodoacodo?igshid=NTdlMDg3MTY="><i class="fa-brands fa-instagram fa-2xl text-white icono"></i></a>
+                    </li>
+                    <li class="py-3 d-flex flex-column">
+                        <a href="https://agenciadeaprendizaje.bue.edu.ar/codo-a-codo/"><i class="fa-solid fa-globe fa-2xl text-white icono"></i></a> 
                     </li>
                 </ul>
             </nav>
         </div>
     </footer>
-
+        
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
