--- a/pages/faq.html
+++ b/pages/faq.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">
-                <img src="../img/logo-CAC.webp" alt="codo a codo" width="70" height="35">
+                <img src="../img/logo-CAC.webp" alt="codo a codo" width="100" height="55">
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion"> 
                 <i class="fa-solid fa-bars text-white"></i>
@@ -28,10 +28,7 @@
         <div id="MenuNavegacion" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-3">
                 <li class="nav-item m-2">
-                    <a class="nav-link nav-link-shadow active" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item m-2">
-                    <a class="nav-link nav-link-shadow" href="#">FAQ</a>
+                    <a class="nav-link nav-link-shadow active" aria-current="page" href="../index.html">Volver</a>
                 </li>
             </ul>
         </div>
@@ -109,28 +106,49 @@
                     <div class="accordion-body">Dirigiéndote y completando el formulario de cambio de horario que les dejamos en  <a href="../index.html">Home</a> (es importante que completen el formulario una ÚNICA vez y aguarden mail de su tutor)</div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSix">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">¿Puedo cursar de manera asincrónica, por mi cuenta?
+                    </button>
+                </h2>
+                <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">No, las clases son sincrónicas, se realizan y se cursan en vivo con el docente a cargo y la comisión asignada, por eso la presencialidad es obligatoria en el programa Codo a Codo.</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSeven">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseSevem" aria-expanded="false" aria-controls="flush-collapseSeven">¿No termine el secundario, puedo realizar el programa?
+                    </button>
+                </h2>
+                <div id="flush-collapseSevem" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">No, el curso es solo para adultos que hayan terminado el secundario.</div>
+                </div>
+            </div>
         </div>
     </section>
     
     <!-- footer -->
-    <footer class="text-white py-4">
+    <footer class="text-white">
         <div class="container">
-            <nav class="row">
-                <a href="#" class="col-md-4 col-sm-6 d-flex align-items-center justify-content-center mb-5">
-                    <img src="../img/logo-CAC.webp" alt="codo a codo" width="70" height="35">
+            <nav class="row d-flex align-items-center justify-content-between">
+                <a href="#" class="col-3">
+                    <img src="logo-CAC.webp" alt="codo a codo" width="70" height="35">
                 </a>
-                <ul class="col-md-4 col-sm-6 list-unstyled d-flex align-items-center flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-footer active" aria-current="page" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-footer" href="#">FAQ</a>
-                    </li>
-                </ul>
-                <ul class="col-md-4 col-sm-12 list-unstyled d-flex flex-column align-items-center">
-                    <li class="font-weight-bold text-uppercase pt-3 pb-2">Seguinos</li>
-                    <li class="d-flex">
+                <ul class="col-3 list-unstyled">
+                    <li class="font-weight-bold text-uppercase">
+                        <a class="nav-link nav-link-footer d-flex flex-column" aria-current="page" href="#">Home</a>
+                        <a class="nav-link nav-link-footer d-flex flex-column" href="./pages/faq.html">Preguntas Frecuentes</a>
+                    </ul>
+                <ul class="col-3 list-unstyled">
+                    <li class="py-3 d-flex flex-column">
                         <a href="https://instagram.com/programacodoacodo?igshid=NTdlMDg3MTY="><i class="fa-brands fa-instagram fa-2xl text-white icono"></i></a>
+                    </li>
+                    <li class="py-3 d-flex flex-column">
+                        <a href="https://agenciadeaprendizaje.bue.edu.ar/codo-a-codo/"><i class="fa-solid fa-globe fa-2xl text-white icono"></i></a> 
                     </li>
                 </ul>
             </nav>
