--- a/pages/faq.html
+++ b/pages/faq.html
@@ -145,10 +145,10 @@
                     </ul>
                 <ul class="col-3 list-unstyled">
                     <li class="py-3 d-flex flex-column">
-                        <a href="https://instagram.com/programacodoacodo?igshid=NTdlMDg3MTY="><i class="fa-brands fa-instagram fa-2xl text-white icono"></i></a>
+                        <a target="_blank"  href="https://instagram.com/programacodoacodo?igshid=NTdlMDg3MTY="><i class="fa-brands fa-instagram fa-2xl text-white icono"></i></a>
                     </li>
                     <li class="py-3 d-flex flex-column">
-                        <a href="https://agenciadeaprendizaje.bue.edu.ar/codo-a-codo/"><i class="fa-solid fa-globe fa-2xl text-white icono"></i></a> 
+                        <a target="_blank"  href="https://agenciadeaprendizaje.bue.edu.ar/codo-a-codo/"><i class="fa-solid fa-globe fa-2xl text-white icono"></i></a> 
                     </li>
                 </ul>
             </nav>
