--- a/pages/faq.html
+++ b/pages/faq.html
@@ -136,7 +136,7 @@
         <div class="container">
             <nav class="row d-flex align-items-center justify-content-between">
                 <a href="#" class="col-3">
-                    <img src="./img/logo-CAC.webp alt="codo a codo" width="70" height="35">
+                    <img src="../img/logo-CAC.webp alt="codo a codo" width="70" height="35">
                 </a>
                 <ul class="col-3 list-unstyled">
                     <li class="font-weight-bold text-uppercase">
