--- a/pages/faq.html
+++ b/pages/faq.html
@@ -141,7 +141,7 @@
                 <ul class="col-3 list-unstyled">
                     <li class="font-weight-bold text-uppercase">
                         <a class="nav-link nav-link-footer d-flex flex-column" aria-current="page" href="#">Home</a>
-                        <a class="nav-link nav-link-footer d-flex flex-column" href="./pages/faq.html">Preguntas Frecuentes</a>
+                        <a class="nav-link nav-link-footer d-flex flex-column" href="faq.html">Preguntas Frecuentes</a>
                     </ul>
                 <ul class="col-3 list-unstyled">
                     <li class="py-3 d-flex flex-column">
